# NFCe_downloader

./: .gitignore  README.md  config-dev.ini  main.py  pyproject.toml
nfce_downloader/: downloader.py
nfce_downloader/services/: captcha_solver.py
nfce_downloader/utils/: requests_pfx_adapter.py
