[project]
name = "nfce_downloader"
version = "0.1.0"
description = "Downloader automatizado de XMLs NFC-e no portal DFe RS, com certificado digital e resolução de CAPTCHA."
authors = [
    { name = "cleiton", email = "cleiton.leonel@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "cryptography>=46.0.1,<47.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "nfce_downloader" }]
package-mode = true
